{
  "version": 4,
  "terraform_version": "1.9.0",
  "serial": 48,
  "lineage": "26ece979-28fb-02b6-2e03-e515e166d229",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_subnet",
      "name": "db_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382387916:subnet/subnet-01ff53c0fcbcd5a62",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "172.31.16.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "existing_default_subnet": true,
            "force_destroy": true,
            "id": "subnet-01ff53c0fcbcd5a62",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "992382387916",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ee445bf4ad7d63e1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "db_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382387916:vpc/vpc-0ee445bf4ad7d63e1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-00f563bd1b2529da0",
            "default_route_table_id": "rtb-076569b575366f356",
            "default_security_group_id": "sg-00cf31b77ef14293b",
            "dhcp_options_id": "dopt-079d43ed99fa6dea7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": false,
            "force_destroy": true,
            "id": "vpc-0ee445bf4ad7d63e1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-076569b575366f356",
            "owner_id": "992382387916"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382387916:security-group/sg-0c26785ba0d4f90b8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c26785ba0d4f90b8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "992382387916",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ee445bf4ad7d63e1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.db_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "allow-sql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:992382387916:security-group-rule/sgr-0be86252d6a12a0db",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 3306,
            "id": "sgr-0be86252d6a12a0db",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0c26785ba0d4f90b8",
            "security_group_rule_id": "sgr-0be86252d6a12a0db",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.db_vpc",
            "aws_security_group.db-sg"
          ]
        }
      ]
    }
  ]
}